# simple-grpo

./: .gitignore  README.md  hpc_test.sh  main.py  pyproject.toml  training_monitor.py
gemma/: eval_grpo.py  hpc_run.sh  train_grpo.py
llama/: hpc_run.sh  train_grpo.py
nb/: Advanced_Llama3_2_(3B)_GRPO_LoRA.ipynb
qwen/: eval_grpo.py  hpc_run.sh  train_grpo.py
recipes/Qwen-Qwen2.5-1.5B-Instruct/: eval_grpo.py  hpc_run.sh
recipes/Qwen-Qwen2.5-3B-Instruct/: eval_grpo.py  hpc_run.sh  train_grpo.py
recipes/google-gemma-3-1b-it/: eval_grpo.py  train_grpo.py
recipes/meta-llama-Llama-3.2-1B-Instruct/: eval_grpo.py  hpc_run.sh  train_grpo.py
recipes/meta-llama-Llama-3.2-3B-Instruct/: eval_grpo.py  hpc_run.sh  train_grpo.py
