[project]
name = "simple-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch==2.7.1",
  "torchvision==0.22.1",
  "torchaudio==2.7.1",
  "transformers>=4.28.1",
  "peft>=0.3.0",
  "trl>=0.3.0",
  "datasets>=2.10.1",
  "wandb",
  "accelerate>=1.10.1",
  "weave>=0.52.8",
  "dotenv>=0.9.9",
  "lighteval[math]",
  "pandas>=2.3.2",
  "latex>=0.7.0",
]

# Specific versions of torch, torchvision, and torchaudio are installed based on the extra feature
[project.optional-dependencies]
cpu = ["torch==2.7.1", "torchvision==0.22.1", "torchaudio==2.7.1"]
cu118 = ["torch==2.7.1", "torchvision==0.22.1", "torchaudio==2.7.1"]


[tool.uv]
# The cpu and cu124 extras are mutually exclusive, you can't use both at the same time
conflicts = [[{ extra = "cpu" }, { extra = "cu118" }]]

# The package is only installed on Linux systems
# environments = ["sys_platform == 'linux' and os_name == 'posix'"]

[tool.uv.sources]
# The torch, torchvision, and torchaudio packages are installed from the pytorch-cpu and pytorch-cu118 indexes
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
]
lighteval = { git = "https://github.com/huggingface/lighteval.git", rev = "d3da6b9bbf38104c8b5e1acc86f83541f9a502d1" }


[[tool.uv.index]]
# The pytorch-cpu index is used to install the torch, torchvision, and torchaudio packages
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
